# django_playlist_handler

./: Makefile  README.md  README.rst  pyproject.toml
playlist_handler/: settings.py  urls.py
polls/: models.py  tests.py  urls.py  views.py
polls/migrations/: 0001_initial.py
polls/templates/polls/: results.html
tests/: test_playlist_handler.py
