[tool.poetry]
name = "playlist_handler"
version = "0.1.0"
description = ""
authors = ["Alhuin <jjanin-r@student.42lyon.fr>"]

[tool.poetry.dependencies]
python = "^3.10"
mysqlclient = "^2.1.0"
Django = "^4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.10.1"
black = "^21.12b0"
flake8 = "^4.0.1"
pre-commit = "^2.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
